--- a/SmartScan/app/src/main/AndroidManifest.xml
+++ b/SmartScan/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.CAMERA" />
-
+    <uses-permission android:name="android.permission.FLASHLIGHT"/>
     <uses-feature
         android:name="android.hardware.camera.front"
         android:required="false" />
@@ -27,6 +27,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartScan"
         tools:targetApi="31">
+        <activity
+            android:name=".CameraX"
+            android:exported="false" />
         <activity
             android:name=".TextRecognition"
             android:exported="false" />
