--- a/SmartScan/app/src/main/AndroidManifest.xml
+++ b/SmartScan/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
             android:name=".CameraX"
             android:exported="false" />
         <activity
-            android:name=".TextRecognition"
+            android:name=".TextRecognitionActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
