--- a/SmartScan/app/src/main/AndroidManifest.xml
+++ b/SmartScan/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.FLASHLIGHT" />
-    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <uses-feature
         android:name="android.hardware.camera.front"
@@ -29,6 +29,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SmartScan"
         tools:targetApi="31">
+        <activity
+            android:name=".ObjectDetectionActivity"
+            android:exported="false" />
         <activity
             android:name=".TranslateActivity"
             android:exported="false" />
