--- a/SmartScan/app/src/main/AndroidManifest.xml
+++ b/SmartScan/app/src/main/AndroidManifest.xml
@@ -30,9 +30,13 @@
         android:theme="@style/Theme.SmartScan"
         tools:targetApi="31">
         <activity
+            android:name=".ImageInformationActivity"
+            android:screenOrientation="portrait"
+            android:exported="false" />
+        <activity
             android:name=".CameraXObjectDetectionActivity"
             android:exported="false"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ObjectDetectionActivity"
             android:exported="false"
